ps-0014: Update logics(profile-rest, exception-handling-common). Return ObjectResponse not object for handling response in client.
