# profile-service-parent/profile-service-client/api-docs.json
@@ -60,8 +60,8 @@
           "201": {
             "description": "Created",
             "schema": {
-              "originalRef": "Profile",
-              "$ref": "#/definitions/Profile"
+              "originalRef": "ProfileResponse",
+              "$ref": "#/definitions/ProfileResponse"
             }
           },
           "401": {
@@ -108,8 +108,8 @@
           "200": {
             "description": "OK",
             "schema": {
-              "originalRef": "Profile",
-              "$ref": "#/definitions/Profile"
+              "originalRef": "ProfileResponse",
+              "$ref": "#/definitions/ProfileResponse"
             }
           },
           "401": {
@@ -130,19 +130,17 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingGET",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingGET",
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "401": {
@@ -161,22 +159,20 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingHEAD",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingHEAD",
         "consumes": [
           "application/json"
         ],
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "204": {
@@ -195,22 +191,20 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingPOST",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingPOST",
         "consumes": [
           "application/json"
         ],
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "201": {
@@ -232,22 +226,20 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingPUT",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingPUT",
         "consumes": [
           "application/json"
         ],
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "201": {
@@ -269,19 +261,17 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingDELETE",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingDELETE",
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "204": {
@@ -300,22 +290,20 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingOPTIONS",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingOPTIONS",
         "consumes": [
           "application/json"
         ],
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "204": {
@@ -334,22 +322,20 @@
         "tags": [
           "basic-error-controller"
         ],
-        "summary": "error",
-        "operationId": "errorUsingPATCH",
+        "summary": "errorHtml",
+        "operationId": "errorHtmlUsingPATCH",
         "consumes": [
           "application/json"
         ],
         "produces": [
-          "*/*"
+          "text/html"
         ],
         "responses": {
           "200": {
             "description": "OK",
             "schema": {
-              "type": "object",
-              "additionalProperties": {
-                "type": "object"
-              }
+              "originalRef": "ModelAndView",
+              "$ref": "#/definitions/ModelAndView"
             }
           },
           "204": {
@@ -390,6 +376,25 @@
         }
       },
       "title": "Contact"
+    },
+    "Error": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "string"
+        },
+        "message": {
+          "type": "string"
+        },
+        "nestedErrors": {
+          "type": "array",
+          "items": {
+            "originalRef": "Error",
+            "$ref": "#/definitions/Error"
+          }
+        }
+      },
+      "title": "Error"
     },
     "IsoChronology": {
       "type": "object",
@@ -695,6 +700,20 @@
         }
       },
       "title": "Profile"
+    },
+    "ProfileResponse": {
+      "type": "object",
+      "properties": {
+        "error": {
+          "originalRef": "Error",
+          "$ref": "#/definitions/Error"
+        },
+        "profile": {
+          "originalRef": "Profile",
+          "$ref": "#/definitions/Profile"
+        }
+      },
+      "title": "ProfileResponse"
     },
     "View": {
       "type": "object",
